--- a/app.css
+++ b/app.css
@@ -16,7 +16,7 @@
   nav ul{
       list-style: none;
       display: flex;
-      justify-content: space-around;
+      justify-content: space-evenly;
       width: 50%;
   }
   #loader{
