--- a/app.css
+++ b/app.css
@@ -1,90 +1,126 @@
-
-  
 *{
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-  }
-  nav{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 16px;
-      color: white;
-      background-color: navy;
-  }
-  nav ul{
-      list-style: none;
-      display: flex;
-      justify-content: space-evenly;
-      width: 50%;
-  }
-  #loader{
-      margin-top: 5px;
-      padding: 10px;
-  }
-  .movie-holder{
-      margin-top: 2rem;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 16px;
+    color: #ffffff;
+    background-color: blue;
+}
+.logo{
+    flex: 1;
+}
+nav ul{
+    flex: 1;
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 2rem;
 }
-  .movie-img-wrapper{
-      height: 300px;
-      width: 180px;
-      background-size: cover;
-  }
-  .d-none{
-      display: none;
-  }
-  .v-none{
-      visibility: hidden;
-      text-align: center;
-  }
-  #booker-grid-holder{
-      margin-top: 2rem;
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-  }
-  .booking-grid{
-      width: 400px;
-      height: 300px;
-      display: grid;
-      grid-template-columns: repeat(4,1fr);
-      grid-template-rows: repeat(3,1fr);
-    gap: 5px;
-  }
-  .booking-grid div{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color:white;
-  }
-  .unavailable-seat{
-   background-color: red;
-  }
-  .available-seat{
-      background-color: green;
-  }
-  .selected-seat{
+nav ul li{
+    list-style-type: none;
+}
+main{
+    padding: 1rem;
+    width: 100%;
+}
+.movie-holder{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+.movie-holder a{
+    flex: 1;
+}
+#loader{
+    position: relative;
+    height: 60px;
+    width: 60px;
+    display: grid;
+    place-content: center;
+    border-radius: 50%;
+    border: 10px solid #ccc;
+}
+#loader::before{
+    box-sizing: border-box;
+    position: absolute;
+    content: "";
+    height: calc(100% + 22px);
+    width: calc(100% + 22px);
+    top: -11px;
+    left: -11px;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: #081563 transparent transparent transparent;
+    animation: rotate .6s linear infinite;
+}
+.movie-img-wrapper{
+    background-size: cover;
+    width: auto;
+    height: 250px;
+}
+#booker{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+#booker-grid-holder{
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    gap: 2rem;
+}
+.booking-grid{
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: .5rem;
+    height: 150px;
+    width: 200px;
+    color: #fff;
+    font-weight: 600;
+}
+#confirm-purchase{
+    display: grid;
+    place-items: center;
+    font-size: 1.2rem;
+}
+#booking-grid-undefined{
+    font-size: auto;
+}
+.seat{
+    display: grid;
+    place-content: center;
+    /* background-color: pink; */
+}
+.available-seat{
+    background-color: green;
+}
+.unavailable-seat{
+    background-color: red;
+}
+.select-seat{
     border:4px outset rgb(0, 0, 0);
-  }
-  #booker{
-      text-align: center;
-  }
-  #book-ticket-btn{
-    padding: 5px;
-    text-align: center;
-    margin: 2rem;
-  }
-  #confirm-purchase h3{
-    margin: 10px auto;
-  }
-  #confirm-purchase h3{
-      padding-bottom: 5px;
-  }
-  #confirm-purchase input{
-    margin-bottom: 5px;
-  }
-  
+}
+
+.d-none{
+    display: none;
+}
+.v-none{
+    visibility: hidden;
+}
+input, button[type="submit"]{
+    width: 200px;
+    height: 35px;
+    padding: .5rem;
+}
+@keyframes rotate {
+    from{transform: rotate(0deg);}
+    to{transform: rotate(360deg);}
+}
